# file-rotator

./: Cargo.toml  LICENSE  README.md
proptest-regressions/: lib.txt  rotation_tracker.txt
src/: lib.rs  rotation_tracker.rs
