[package]
name = "file-rotator"
description = "File rotation made simple"
version = "0.4.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/PurpleMyst/file-rotator"
edition = "2018"

[dependencies]
itertools = "0.9.0"

[dev-dependencies]
proptest = "0.10.0"