[package]
name = "file-rotator"
description = "File rotation made simple"
version = "0.5.1"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/PurpleMyst/file-rotator"
edition = "2018"

[dependencies]
bytecount = "0.6.3"
itertools = "0.9.0"
zstd = "0.12.3"

[dev-dependencies]
proptest = "0.10.0"
tempfile = "3.1.0"
